--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Patrick Shiel",
   "dependencies": {
     "gatsby": "^2.18.12",
+    "gatsby-background-image": "^0.9.12",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-manifest": "^2.2.31",
     "gatsby-plugin-offline": "^3.0.27",
@@ -15,6 +16,7 @@
     "gatsby-plugin-svg-sprite": "^2.0.1",
     "gatsby-source-filesystem": "^2.1.40",
     "gatsby-transformer-sharp": "^2.3.7",
+    "intersection-observer": "^0.7.0",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
