--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-modal": "^3.11.1",
     "smooth-scroll": "^16.1.2"
   },
   "devDependencies": {
